--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -72,7 +72,7 @@ a.menu:hover {
 
 table {
 	border: 2px #00468E outset;
-	vertical-align: center;
+	vertical-align: left;
 	background-color: #FFFFFF;
 	margin: auto;
 	border-color: black;
