--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -9,18 +9,21 @@ body {
 
 
 #status_div {
-	font-weight: bold;
-	font-size: 11px;
-	*border: 2px solid #ffffff;
-	width: 100%;
-	text-align: center;
+	text-align: right;
 	margin: 0 auto;
 	left: 0%;
-	position: absolute;
 	bottom: 0;
 	position: fixed;
-	background-color: #FFFFFF;
-	color: #000000;
+	font-weight: bold;
+	font-size: 11px;
+	width: 100%;
+	margin: 0 auto;
+	margin-left: 0px;
+	background-color: #000000;
+	color: #FFFFFF;
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#404040),to(#000000) );
+	background-image: -moz-linear-gradient(100% 100% 90deg, #404040, #000000);
+	box-shadow: 0 5px 15px hsla(0, 0%, 0%, .8);
 }
 
 
@@ -34,8 +37,11 @@ body {
 	left: 0%;
 	margin-left: 0px;
 	position: fixed;
-	background-color: #FFFFFF;
-	color: #000000;
+	background-color: #000000;
+	color: #FFFFFF;
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#404040),to(#000000) );
+	background-image: -moz-linear-gradient(100% 100% 90deg, #404040, #000000);
+	box-shadow: 0 5px 15px hsla(0, 0%, 0%, .8);
 }
 
 
@@ -48,15 +54,14 @@ a:link,a:visited,a:active {
 
 a.menu:link,a.menu:visited,a.menu:active {
 	text-decoration: none;
-	color: #000000;
-	background-color: #FFFFFF;
+	color: #FFFFFF;
 	font-weight: bolder;
-	border: solid 1px #ffffff;
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#404040),to(#000000) );
+	background-image: -moz-linear-gradient(100% 100% 90deg, #404040, #000000);
 }
 
 a.menu:hover {
-	color: #FFFFFF;
-	background-color: #0033FF;
+	color: #0066CC;
 	font-weight: bolder;
 }
 
@@ -71,12 +76,13 @@ a.menu:hover {
 }
 
 table {
-	border: 2px #00468E outset;
+	border: 2px #000000 outset;
 	vertical-align: left;
 	background-color: #FFFFFF;
 	margin: auto;
-	border-color: black;
-	border-radius: 10px;
+	border-color: #000000;
+	border-radius: 5px;
+	box-shadow: 0 10px 30px hsla(0, 0%, 0%, .8);
 }
 
 td{
@@ -90,14 +96,16 @@ td{
 }
 
 th {
-	border-radius: 10px;
-	background-color: #0066CC;
 	color: white;
 	font-weight: bold;
 	font-size: 11px;
 	padding: 5px;
 	border: 0px solid #000000;
 	height: 25px;
+	border-radius: 3px;
+	background-color: #000000;
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#404040),to(#000000) );
+	background-image: -moz-linear-gradient(100% 100% 90deg, #404040, #000000);
 }
 
 input[type=submit] {
